# dapps-dutch-auction

./: .metahash  CHANGELOG.md  Cargo.toml  Makefile  crates.js  help.html  index.html  meta.txt  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml
auction_io/: all.html  index.html  sidebar-items.js
auction_io/auction/: enum.Action.html  enum.Error.html  enum.Event.html  enum.Status.html  index.html  sidebar-items.js  struct.AuctionInfo.html  struct.CreateConfig.html  struct.Duration.html  struct.Transaction.html  type.TransactionId.html
auction_io/io/: index.html  sidebar-items.js  struct.AuctionMetadata.html
auction_state/: all.html  index.html
auction_state/metafns/: fn.info.html  index.html  sidebar-items.js  type.State.html
dutch_auction/: all.html  index.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  (+1 more)
implementors/gmeta/: trait.Metadata.js
implementors/scale_info/: trait.TypeInfo.js
io/: Cargo.toml
io/src/: auction.rs  io.rs  lib.rs
src/: contract.rs  lib.rs  state.rs
src/auction_io/: auction.rs.html  io.rs.html  lib.rs.html
src/auction_state/: lib.rs.html
src/dutch_auction/: contract.rs.html  lib.rs.html
state/: Cargo.toml  build.rs
state/src/: lib.rs
tests/: dutch_auction_tests.rs  node_tests.rs  state_tests.rs
tests/routines/: mod.rs
(+5 files in other folders)
