[package]
name = "dutch-auction"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gear Technologies"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
auction-io = { path = "io" }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"] }
nft-io = { path = "../non-fungible-token/nft/io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
gear-lib = { path = "../gear-lib" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
